declare range,chunk size and calculate starting and ending bytes

--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 <body>
   
 
-<video src="/videos/Backend Web Development Explained.mp4" width="50%" controls></video>
+<video  width="50%" controls>
+  <source src="/video" type="video/mp4" />
+</video>
 
 
 
