add READme file

--- a/index.html
+++ b/index.html
@@ -5,14 +5,22 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Video Streaming with Node</title>
+  <style>
+    body{
+      text-align: center;
+    }
+  </style>
 </head>
 <body>
   
+  <h2 style ="text-align: left;"> Here is the sample video:</h2>
 
-<video  width="50%" controls>
+<video   width="1000" height="600" controls>
   <source src="/video" type="video/mp4" />
+  
 </video>
 
+  
 
 
 </body>
